# MHCXGraph

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  maintenance.yml
.github/workflows/: deploy.yml  docs-page.yml  testing.yml
MHCXGraph/: __init__.py  app.py
MHCXGraph/assets/: dashboard_template.html  dashboard_template_bkp.html  imgt_display_all.csv  imgt_numbering_mapping_all.csv
MHCXGraph/assets/dashboard/: base.html  export_modal.html  sidebar.html
MHCXGraph/assets/dashboard/js/: analysis.js  data.js  export_modal.js  graph.js  grid.js  main.js  (+4 more)
MHCXGraph/classes/: graph.py
MHCXGraph/cli/: cli_parser.py
MHCXGraph/config/: __init__.py  parse_configs.py
MHCXGraph/core/: config.py  contact_map.py  edges.py  metadata.py  pdb_graph_builder.py  pipeline.py  residue_tracking.py  serial.py  subgraphs.py  tracking.py
MHCXGraph/io_utils/: pdb_io.py
MHCXGraph/jsons/: residues_classes.json
MHCXGraph/manifests/: manifest_mage_titin.json
MHCXGraph/pydssp/: __init__.py  pydssp.py
MHCXGraph/scripts/: analysis.py  analysis2.py  create_heatmaps.py  renumber_MHCII_imgt.py  renumber_MHCI_imgt.py
MHCXGraph/utils/: __init__.py  analysis.py  logging_utils.py  preprocessing.py  pyvis_inject.py  tools.py  vis_tracer.py
MHCXGraph/workflow/: association.py  manifest.py
assets/: pyvis_std_hover.js
chunkTests/: Analyse.ipynb  manifest-ca-10_2.json  manifest-ca-10_5.json  manifest-ca-10_6.json  manifest-ca-10_9.json  manifest-ca-8.5_2.json  manifest-ca-8.5_5.json  manifest-ca-8.5_9.json
chunkTests/ca_only/mel5_10_2/: manifest.json
chunkTests/ca_only/mel5_10_5/: manifest.json
chunkTests/ca_only/mel5_10_6/: manifest.json
chunkTests/ca_only/mel5_10_9/: manifest.json
chunkTests/ca_only/mel5_8.5_2/: manifest.json
chunkTests/ca_only/mel5_8.5_5/: manifest.json
chunkTests/ca_only/mel5_8.5_5_shuffle/: manifest.json
chunkTests/ca_only/mel5_8.5_9/: manifest.json
crossreact_analysis/: crossreact_tcrs_v4.csv
docs/: Makefile
docs/source/: conf.py  examples.md  index.rst
docs/source/_static/: custom.css
docs/source/about/: index.rst
docs/source/configuration/: index.rst
docs/source/gettingstarted/: index.rst
examples/: EXAMPLES.md
examples/manifests/: manifest-minimal.json  manifest-multiple.json  manifest-pairwise.json  manifest-screening.json
examples/minimal/: README.md  manifest.json
shuffleTest/: manifest-ca-8.5_5_normal.json  manifest-ca-8.5_5_shuffle.json
shuffleTest/mel5_8.5_5_normal/: manifest.json
shuffleTest/mel5_8.5_5_normal/MULTIPLE/: graph_melana-multiple-5-normal.json  nodes_per_protein.csv
shuffleTest/mel5_8.5_5_normal/filtered_graphs/: muc16tss_renamed_filtered.cif
shuffleTest/mel5_8.5_5_shuffle/: manifest.json
shuffleTest/mel5_8.5_5_shuffle/MULTIPLE/: graph_melana-multiple-5-shuffle.json  nodes_per_protein.csv  nodes_summary_weighted.csv
(+25 files in other folders)
